[gd_scene load_steps=7 format=3 uid="uid://cy6qdae7lgetf"]

[ext_resource type="Script" uid="uid://cy7oj5wu7ft0e" path="res://game_scenes/mission_text/mission_text.gd" id="1_1tnxl"]
[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="1_2s7nj"]
[ext_resource type="Texture2D" uid="uid://b50lklisctxhu" path="res://images/UI_images/pause_button.png" id="5_5tyjb"]
[ext_resource type="Texture2D" uid="uid://wyhspu3kjkna" path="res://images/UI_images/Startscreen.png" id="6_1pw74"]
[ext_resource type="Texture2D" uid="uid://b36qech8qekm7" path="res://images/UI_images/fast_forward_button.png" id="6_sl2nd"]
[ext_resource type="Texture2D" uid="uid://oesjqrlw4wry" path="res://images/UI_images/Startscreen1.png" id="7_dqs4x"]

[node name="node" type="Node2D"]
script = ExtResource("1_1tnxl")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(577, 324)
scale = Vector2(1.154, 0.972973)
texture = ExtResource("7_dqs4x")

[node name="Label" type="Label" parent="."]
offset_left = 228.0
offset_top = 618.0
offset_right = 920.0
offset_bottom = 849.0
theme = ExtResource("1_2s7nj")
text = "r
r
r
r
r
r
r
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="."]
visible = false
offset_left = 76.0
offset_top = 503.0
offset_right = 226.0
offset_bottom = 578.0
focus_mode = 0
theme = ExtResource("1_2s7nj")
text = "BACK"

[node name="skip" type="Button" parent="."]
offset_left = 921.0
offset_top = 503.0
offset_right = 1071.0
offset_bottom = 578.0
focus_mode = 0
theme = ExtResource("1_2s7nj")
text = "SKIP"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(577, 324)
scale = Vector2(1.154, 0.972973)
texture = ExtResource("6_1pw74")

[node name="pause" type="Button" parent="."]
offset_left = 922.0
offset_top = 434.0
offset_right = 938.0
offset_bottom = 450.0
scale = Vector2(3.5, 3.5)
focus_mode = 0
theme = ExtResource("1_2s7nj")
icon = ExtResource("5_5tyjb")
icon_alignment = 1

[node name="speed_button" type="Button" parent="."]
offset_left = 986.0
offset_top = 434.0
offset_right = 1010.0
offset_bottom = 450.0
scale = Vector2(3.5, 3.5)
focus_mode = 0
icon = ExtResource("6_sl2nd")
icon_alignment = 1

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="speed_button" to="." method="_on_speed_button_pressed"]
